# tetrika-test

./: .dockerignore  README.md  docker-compose.dev.yml  docker-compose.yml
api/: api-start.sh  api.dockerfile  log.ini
api/app/: mypy.ini  pyproject.toml
api/app/app/: config.py  main.py
api/app/app/api/api_v1/: api.py
api/app/app/api/api_v1/endpoints/: files.py
api/app/app/core/: http_session.py  uploades.py  workers.py
api/app/app/crud/: redis_crud_base.py
api/app/app/db/: init_redis.py
api/app/app/schemas/: constraint.py  scheme_data.py  scheme_error.py
api/app/app/templates/: base.html  check_result.html  file_done.html  form_page.html
api/app/app/util/: blocker.py  timer.py
api/app/tests/: conftest.py  test_file.csv  test_file_long.csv
api/app/tests/core/: test_parse_data.py
api/app/tests/endpoints/api/api_v1/: test_files.py
